re-record cassette and add another assertion

--- a/tests/cassettes/test_insurance_refund.yaml
+++ b/tests/cassettes/test_insurance_refund.yaml
@@ -26,19 +26,19 @@ interactions:
     uri: https://api.easypost.com/v2/insurances
   response:
     body:
-      string: '{"id": "ins_f79aee8d38f34ace96b6aa5eab6156b9", "object": "Insurance",
+      string: '{"id": "ins_b649ec97deaf4bce84873366a6c5d41a", "object": "Insurance",
         "mode": "test", "reference": null, "status": "pending", "amount": "100.00000",
-        "provider": "easypost", "provider_id": null, "to_address": {"id": "adr_1bc82f35f2a211eeb49aac1f6bc539aa",
-        "object": "Address", "created_at": "2024-04-04T16:40:55+00:00", "updated_at":
-        "2024-04-04T16:40:55+00:00", "name": "ELIZABETH SWAN", "company": null, "street1":
+        "provider": "easypost", "provider_id": null, "to_address": {"id": "adr_e0963f8df5d111eeb369ac1f6bc539aa",
+        "object": "Address", "created_at": "2024-04-08T18:00:25+00:00", "updated_at":
+        "2024-04-08T18:00:25+00:00", "name": "ELIZABETH SWAN", "company": null, "street1":
         "179 N HARBOR DR", "street2": "", "city": "REDONDO BEACH", "state": "CA",
         "zip": "90277-2506", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": false, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {"zip4": {"success": true, "errors":
         [], "details": null}, "delivery": {"success": true, "errors": [], "details":
         {"latitude": 33.8436, "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}},
-        "from_address": {"id": "adr_1bccda95f2a211eea1c93cecef1b359e", "object": "Address",
-        "created_at": "2024-04-04T16:40:56+00:00", "updated_at": "2024-04-04T16:40:56+00:00",
+        "from_address": {"id": "adr_e09e23dcf5d111eead5d3cecef1b359e", "object": "Address",
+        "created_at": "2024-04-08T18:00:26+00:00", "updated_at": "2024-04-08T18:00:26+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
         "street2": "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
@@ -46,18 +46,18 @@ interactions:
         null, "verifications": {"zip4": {"success": true, "errors": [], "details":
         null}, "delivery": {"success": true, "errors": [], "details": {"latitude":
         37.77551, "longitude": -122.39697, "time_zone": "America/Los_Angeles"}}}},
-        "shipment_id": null, "tracker": {"id": "trk_91e45367e834422c9c620e3c91a45bf4",
+        "shipment_id": null, "tracker": {"id": "trk_14186867f37a44fb876a1fe4aacc675c",
         "object": "Tracker", "mode": "test", "tracking_code": "EZ1000000001", "status":
-        "pre_transit", "status_detail": "status_update", "created_at": "2024-04-03T16:41:49Z",
-        "updated_at": "2024-04-03T16:41:49Z", "signed_by": null, "weight": null, "est_delivery_date":
-        "2024-04-03T16:41:49Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
+        "pre_transit", "status_detail": "status_update", "created_at": "2024-04-08T17:58:39Z",
+        "updated_at": "2024-04-08T17:58:39Z", "signed_by": null, "weight": null, "est_delivery_date":
+        "2024-04-08T17:58:39Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
         [{"object": "TrackingDetail", "message": "Pre-Shipment Info Sent to USPS",
         "description": "", "status": "pre_transit", "status_detail": "status_update",
-        "datetime": "2024-03-03T16:41:49Z", "source": "USPS", "carrier_code": "",
+        "datetime": "2024-03-08T17:58:39Z", "source": "USPS", "carrier_code": "",
         "tracking_location": {"object": "TrackingLocation", "city": null, "state":
         null, "country": null, "zip": null}}, {"object": "TrackingDetail", "message":
         "Shipping Label Created", "description": "", "status": "pre_transit", "status_detail":
-        "status_update", "datetime": "2024-03-04T05:18:49Z", "source": "USPS", "carrier_code":
+        "status_update", "datetime": "2024-03-09T06:35:39Z", "source": "USPS", "carrier_code":
         "", "tracking_location": {"object": "TrackingLocation", "city": "HOUSTON",
         "state": "TX", "country": null, "zip": "77063"}}], "carrier_detail": {"object":
         "CarrierDetail", "service": "First-Class Package Service", "container_type":
@@ -66,10 +66,10 @@ interactions:
         "city": "HOUSTON", "state": "TX", "country": null, "zip": "77063"}, "destination_location":
         "CHARLESTON SC, 29401", "destination_tracking_location": null, "guaranteed_delivery_date":
         null, "alternate_identifier": null, "initial_delivery_attempt": null}, "finalized":
-        true, "is_return": false, "public_url": "https://track.easypost.com/djE6dHJrXzkxZTQ1MzY3ZTgzNDQyMmM5YzYyMGUzYzkxYTQ1YmY0",
+        true, "is_return": false, "public_url": "https://track.easypost.com/djE6dHJrXzE0MTg2ODY3ZjM3YTQ0ZmI4NzZhMWZlNGFhY2M2NzVj",
         "fees": []}, "tracking_code": "EZ1000000001", "fee": {"object": "Fee", "type":
         "InsuranceFee", "amount": "1.00000", "charged": true, "refunded": false},
-        "messages": [], "created_at": "2024-04-04T16:40:56Z", "updated_at": "2024-04-04T16:40:56Z"}'
+        "messages": [], "created_at": "2024-04-08T18:00:26Z", "updated_at": "2024-04-08T18:00:26Z"}'
     headers:
       cache-control:
       - private, no-cache, no-store
@@ -80,7 +80,7 @@ interactions:
       expires:
       - '0'
       location:
-      - /api/v2/insurances/ins_f79aee8d38f34ace96b6aa5eab6156b9
+      - /api/v2/insurances/ins_b649ec97deaf4bce84873366a6c5d41a
       pragma:
       - no-cache
       referrer-policy:
@@ -91,25 +91,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 15191851660ed817e779a0b10071dc42
+      - 0f86fc76661430b9e799e92100897c77
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb36nuq
+      - bigweb32nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb3nuq 39c21b8207
-      - extlb2nuq 60566a9ec2
+      - intlb4nuq 39c21b8207
+      - extlb1nuq 60566a9ec2
       x-runtime:
-      - '0.186449'
+      - '0.194536'
       x-version-label:
-      - easypost-202404041612-01938f7c7e-master
+      - easypost-202404081732-cdcb81b7f6-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -133,22 +135,22 @@ interactions:
       user-agent:
       - <REDACTED>
     method: POST
-    uri: https://api.easypost.com/v2/insurances/ins_f79aee8d38f34ace96b6aa5eab6156b9/refund
+    uri: https://api.easypost.com/v2/insurances/ins_b649ec97deaf4bce84873366a6c5d41a/refund
   response:
     body:
-      string: '{"id": "ins_f79aee8d38f34ace96b6aa5eab6156b9", "object": "Insurance",
+      string: '{"id": "ins_b649ec97deaf4bce84873366a6c5d41a", "object": "Insurance",
         "mode": "test", "reference": null, "status": "cancelled", "amount": "100.00000",
-        "provider": "easypost", "provider_id": null, "to_address": {"id": "adr_1bc82f35f2a211eeb49aac1f6bc539aa",
-        "object": "Address", "created_at": "2024-04-04T16:40:55+00:00", "updated_at":
-        "2024-04-04T16:40:55+00:00", "name": "ELIZABETH SWAN", "company": null, "street1":
+        "provider": "easypost", "provider_id": null, "to_address": {"id": "adr_e0963f8df5d111eeb369ac1f6bc539aa",
+        "object": "Address", "created_at": "2024-04-08T18:00:25+00:00", "updated_at":
+        "2024-04-08T18:00:25+00:00", "name": "ELIZABETH SWAN", "company": null, "street1":
         "179 N HARBOR DR", "street2": null, "city": "REDONDO BEACH", "state": "CA",
         "zip": "90277-2506", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": false, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {"zip4": {"success": true, "errors":
         [], "details": null}, "delivery": {"success": true, "errors": [], "details":
         {"latitude": 33.8436, "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}},
-        "from_address": {"id": "adr_1bccda95f2a211eea1c93cecef1b359e", "object": "Address",
-        "created_at": "2024-04-04T16:40:56+00:00", "updated_at": "2024-04-04T16:40:56+00:00",
+        "from_address": {"id": "adr_e09e23dcf5d111eead5d3cecef1b359e", "object": "Address",
+        "created_at": "2024-04-08T18:00:26+00:00", "updated_at": "2024-04-08T18:00:26+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
         "street2": null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
@@ -156,18 +158,18 @@ interactions:
         null, "verifications": {"zip4": {"success": true, "errors": [], "details":
         null}, "delivery": {"success": true, "errors": [], "details": {"latitude":
         37.77551, "longitude": -122.39697, "time_zone": "America/Los_Angeles"}}}},
-        "shipment_id": null, "tracker": {"id": "trk_9e3524de40064c12a4681ec0134c61e1",
+        "shipment_id": null, "tracker": {"id": "trk_e332af52adae42bbaec7109079e5d806",
         "object": "Tracker", "mode": "test", "tracking_code": "EZ1000000001", "status":
-        "pre_transit", "status_detail": "status_update", "created_at": "2024-04-04T16:40:56Z",
-        "updated_at": "2024-04-04T16:40:56Z", "signed_by": null, "weight": null, "est_delivery_date":
-        "2024-04-04T16:40:56Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
+        "pre_transit", "status_detail": "status_update", "created_at": "2024-04-08T18:00:26Z",
+        "updated_at": "2024-04-08T18:00:26Z", "signed_by": null, "weight": null, "est_delivery_date":
+        "2024-04-08T18:00:26Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
         [{"object": "TrackingDetail", "message": "Pre-Shipment Info Sent to USPS",
         "description": "", "status": "pre_transit", "status_detail": "status_update",
-        "datetime": "2024-03-04T16:40:56Z", "source": "USPS", "carrier_code": "",
+        "datetime": "2024-03-08T18:00:26Z", "source": "USPS", "carrier_code": "",
         "tracking_location": {"object": "TrackingLocation", "city": null, "state":
         null, "country": null, "zip": null}}, {"object": "TrackingDetail", "message":
         "Shipping Label Created", "description": "", "status": "pre_transit", "status_detail":
-        "status_update", "datetime": "2024-03-05T05:17:56Z", "source": "USPS", "carrier_code":
+        "status_update", "datetime": "2024-03-09T06:37:26Z", "source": "USPS", "carrier_code":
         "", "tracking_location": {"object": "TrackingLocation", "city": "HOUSTON",
         "state": "TX", "country": null, "zip": "77063"}}], "carrier_detail": {"object":
         "CarrierDetail", "service": "First-Class Package Service", "container_type":
@@ -176,15 +178,16 @@ interactions:
         "city": "HOUSTON", "state": "TX", "country": null, "zip": "77063"}, "destination_location":
         "CHARLESTON SC, 29401", "destination_tracking_location": null, "guaranteed_delivery_date":
         null, "alternate_identifier": null, "initial_delivery_attempt": null}, "finalized":
-        true, "is_return": false, "public_url": "https://track.easypost.com/djE6dHJrXzllMzUyNGRlNDAwNjRjMTJhNDY4MWVjMDEzNGM2MWUx",
+        true, "is_return": false, "public_url": "https://track.easypost.com/djE6dHJrX2UzMzJhZjUyYWRhZTQyYmJhZWM3MTA5MDc5ZTVkODA2",
         "fees": []}, "tracking_code": "EZ1000000001", "fee": {"object": "Fee", "type":
         "InsuranceFee", "amount": "1.00000", "charged": true, "refunded": false},
-        "messages": [], "created_at": "2024-04-04T16:40:56Z", "updated_at": "2024-04-04T16:40:56Z"}'
+        "messages": ["Insurance was cancelled by the user."], "created_at": "2024-04-08T18:00:26Z",
+        "updated_at": "2024-04-08T18:00:26Z"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '3372'
+      - '3410'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -199,25 +202,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 15191851660ed818e779a0b10071dca2
+      - 0f86fc76661430bae799e92100897d12
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb42nuq
+      - bigweb32nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb3nuq 39c21b8207
-      - extlb2nuq 60566a9ec2
+      - extlb1nuq 60566a9ec2
       x-runtime:
-      - '0.134407'
+      - '0.152472'
       x-version-label:
-      - easypost-202404041612-01938f7c7e-master
+      - easypost-202404081732-cdcb81b7f6-master
       x-xss-protection:
       - 1; mode=block
     status:
